[package]
name = "authoritative_server"
version = "0.1.1"
edition = "2024"
default-run = "authoritative_server"

[dependencies]
bevy = { version = "0.16.1", features = ["serialize"] }
bevy_simplenet = "0.16.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
uuid = { version = "1.18.0", features = ["v4"] }

[[bin]]
name = "test"
path = "src/bin/test.rs"
